--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="menu">
         <h5 class="h5one">Lugar</h5>
-        <h6 id="h6one">HOME</h6>
-        <h6 id="h6one">ABOUT</h6>
-        <h6 id="h6one">PROJECT</h6>
-        <h6 id="h6one">CONTACT</h6>
+        <h6 id="h6one"><a href="">HOME</a></h6>
+        <h6 id="h6one"><a href="">ABOUT</a></h6>
+        <h6 id="h6one"><a href="">PROJECT</a></h6>
+        <h6 id="h6one"><a href="">CONTACT</a></h6>
     </div>
         <div class="first">
             <div class="second">
@@ -122,7 +122,7 @@
                     <input type="text" placeholder="Last name" id="input1" style="margin-left: 30px;"><br>
                     <input type="email" placeholder="Email address" id="input1">
                     <input type="text" placeholder="Phone number"  id="input1" style="margin-left: 30px"><br>
-                    <input type="text" placeholder="Description" id="inputdes">
+                    <input type="textarea" placeholder="Description" id="inputdes">
                     <div id="inputbtn">
                         <button  style="background-color:#1E3240 ; margin-right: 40px;">Get a quote</button>
                         <p id="btntext">We don’t sell your email and spam</p>
