--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <input type="text" placeholder="Last name" id="input1" style="margin-left: 30px;"><br>
                     <input type="email" placeholder="Email address" id="input1">
                     <input type="text" placeholder="Phone number"  id="input1" style="margin-left: 30px"><br>
-                    <input type="textarea" placeholder="Description" id="inputdes">
+                    <textarea name="" id="inputdes" placeholder="Description"></textarea>
                     <div id="inputbtn">
                         <button  style="background-color:#1E3240 ; margin-right: 40px;">Get a quote</button>
                         <p id="btntext">We don’t sell your email and spam</p>
